force-app/main/default/objects/Lead/fields/Budget_Range__c.field-meta.xml
<CustomField>
    <fullName>Budget_Range__c</fullName>
    <label>Budget Range</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>5-15 Lakhs</fullName>
            </value>
            <value>
                <fullName>15-35 Lakhs</fullName>
            </value>
            <value>
                <fullName>35-60 Lakhs</fullName>
            </value>
            <value>
                <fullName>&gt;60 Lakhs</fullName>
            </value>
            <value>
                <fullName>15 - 35 Lakhs</fullName>
                <isActive>false</isActive>
                <label>15 - 35 Lakhs</label>
            </value>
            <value>
                <fullName>35 - 60 Lakhs</fullName>
                <isActive>false</isActive>
                <label>35 - 60 Lakhs</label>
            </value>
            <value>
                <fullName>5 - 15 Lakhs</fullName>
                <isActive>false</isActive>
                <label>5 - 15 Lakhs</label>
            </value>
            <value>
                <fullName>&gt; 60 Lakhs</fullName>
                <isActive>false</isActive>
                <label>&gt; 60 Lakhs</label>
            </value>
            <value>
                <fullName>Select</fullName>
                <isActive>false</isActive>
                <label>Select</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>