force-app/main/default/objects/Lead/fields/Clients_Pain_Point__c.field-meta.xml
<CustomField>
    <fullName>Clients_Pain_Point__c</fullName>
    <label>Clients Pain Point</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>