force-app/main/default/objects/Lead/fields/Disqualified_Reason__c.field-meta.xml
<CustomField>
    <fullName>Disqualified_Reason__c</fullName>
    <label>Disqualified Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No proper budget</fullName>
            </value>
            <value>
                <fullName>Not responsive</fullName>
                <label>Not Responsive</label>
            </value>
            <value>
                <fullName>Contact information is incorrect (fake email, company name, etc.)</fullName>
            </value>
            <value>
                <fullName>Not making purchase decision in the next 12 months</fullName>
            </value>
            <value>
                <fullName>Bad Data</fullName>
                <isActive>false</isActive>
                <label>Bad Data</label>
            </value>
            <value>
                <fullName>Budget</fullName>
                <isActive>false</isActive>
                <label>Budget</label>
            </value>
            <value>
                <fullName>Partner/Competitor</fullName>
                <isActive>false</isActive>
                <label>Partner/Competitor</label>
            </value>
            <value>
                <fullName>Size</fullName>
                <isActive>false</isActive>
                <label>Size</label>
            </value>
            <value>
                <fullName>Timeline</fullName>
                <isActive>false</isActive>
                <label>Timeline</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>