force-app/main/default/objects/Lead/fields/Interested__c.field-meta.xml
<CustomField>
    <fullName>Interested__c</fullName>
    <label>Interested</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Not Confirmed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>