force-app/main/default/objects/Lead/fields/isInterested__c.field-meta.xml
<CustomField>
    <fullName>isInterested__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isInterested</label>
    <type>Checkbox</type>
</CustomField>