force-app/main/default/objects/Lead/fields/Lead_Project_status__c.field-meta.xml
<CustomField>
    <fullName>Lead_Project_status__c</fullName>
    <label>Lead Project status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Existing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>