force-app/main/default/objects/Lead/fields/Make_a_deal_within__c.field-meta.xml
<CustomField>
    <fullName>Make_a_deal_within__c</fullName>
    <label>Make a deal within</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>3 months</fullName>
            </value>
            <value>
                <fullName>4 months</fullName>
            </value>
            <value>
                <fullName>6 months</fullName>
            </value>
            <value>
                <fullName>9 months</fullName>
            </value>
            <value>
                <fullName>12months</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>