force-app/main/default/objects/Lead/fields/Makes_a_Deal_Within__c.field-meta.xml
<CustomField>
    <fullName>Makes_a_Deal_Within__c</fullName>
    <label>Makes a Deal Within</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0 - 3 Months</fullName>
            </value>
            <value>
                <fullName>3 - 6 Months</fullName>
            </value>
            <value>
                <fullName>6 - 9 Months</fullName>
            </value>
            <value>
                <fullName>9 - 12 Months</fullName>
            </value>
            <value>
                <fullName>&gt; 12 Months</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>