force-app/main/default/objects/Lead/fields/Nurture_Reasons__c.field-meta.xml
<CustomField>
    <fullName>Nurture_Reasons__c</fullName>
    <label>Nurture Reasons</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Tentative timeframe</fullName>
            </value>
            <value>
                <fullName>Get to know more on pain points</fullName>
            </value>
            <value>
                <fullName>No proper response</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>