force-app/main/default/objects/Lead/fields/Total_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Total_Revenue__c</fullName>
    <label>Total Revenue</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1-3 Crore</fullName>
            </value>
            <value>
                <fullName>4-10 Crore</fullName>
            </value>
            <value>
                <fullName>More than 10 Crore</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>