force-app/main/default/objects/Lead/recordTypes/Direct_Lead.recordType-meta.xml
<RecordType>
    <fullName>Direct_Lead</fullName>
    <active>true</active>
    <businessProcess>Sample Lead Process</businessProcess>
    <label>Direct Lead</label>
</RecordType>