force-app/main/default/objects/Lead/recordTypes/Indirect_Lead.recordType-meta.xml
<RecordType>
    <fullName>Indirect_Lead</fullName>
    <active>true</active>
    <businessProcess>Sample Lead Process</businessProcess>
    <label>Indirect Lead</label>
</RecordType>