force-app/main/default/objects/Lead/recordTypes/Test_3.recordType-meta.xml
<RecordType>
    <fullName>Test_3</fullName>
    <active>false</active>
    <businessProcess>Sample Lead Process</businessProcess>
    <label>Test 3</label>
</RecordType>