force-app/main/default/objects/Lead/validationRules/ConversionNotAllowdTillComplete.validationRule-meta.xml
<ValidationRule>
    <fullName>ConversionNotAllowdTillComplete</fullName>
    <active>false</active>
    <errorConditionFormula>IsConverted = TRUE &amp;&amp;  Qualified__c = FALSE</errorConditionFormula>
    <errorMessage>You cant convert or update lead stage until it becomes qualified</errorMessage>
</ValidationRule>