force-app/main/default/objects/Lead/validationRules/Email_Validation_rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Email_Validation_rule</fullName>
    <active>false</active>
    <errorConditionFormula>NOT(REGEX( Email  ,&apos;([a-zA-Z0-9_\\-\\.]+)@((\\[a-z]{1,3}\\.[a-z]{1,3}\\.[a-z]{1,3}\\.)|(([a-zA-Z0-9\\-]+\\.)+))([a-zA-Z]{2,4}|[0-9]{1,3})&apos;))</errorConditionFormula>
    <errorDisplayField>Email</errorDisplayField>
    <errorMessage>please enter email in the correct format</errorMessage>
</ValidationRule>