force-app/main/default/objects/Lead/validationRules/ValidateSattusNew.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidateSattusNew</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
         ISPICKVAL( Status , &apos;New&apos;),  
	 ISBLANK( Website )  
)</errorConditionFormula>
    <errorMessage>Please fill out the fields</errorMessage>
</ValidationRule>