force-app/main/default/objects/Lead/validationRules/ValidateSattusWorking.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidateSattusWorking</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
         ISPICKVAL( Status , &apos;Working&apos;),
         ISPICKVAL(  Interested__c  , &apos;Yes&apos;),    
	 ISBLANK(  Budget__c  ), 
         ISPICKVAL(  Make_a_deal_within__c  , &apos;&apos;)  
         
)</errorConditionFormula>
    <errorMessage>Please fill out the fields</errorMessage>
</ValidationRule>