force-app/main/default/objects/Lead/listViews/Cyntexa_Leads.listView-meta.xml
<ListView>
    <fullName>Cyntexa_Leads</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.TITLE</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>Budget_Range__c</columns>
    <columns>LEAD.RATING</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.RATING</field>
        <operation>notEqual</operation>
        <value>Hot,Warm,Cold</value>
    </filters>
    <label>Cyntexa Leads</label>
</ListView>